--- a/pom.xml
+++ b/pom.xml
@@ -3,27 +3,23 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>chatbot-apiai-webhook-app</artifactId>
+	<artifactId>chatbot-apiai-webhook</artifactId>
 	<packaging>jar</packaging>
 
-	<name>chatbot-apiai-webhook-app</name>
-
-	<parent>
-		<groupId>com.wolterskluwer.gpo.ace</groupId>
-		<artifactId>chatbot-poc</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+	<name>chatbot-apiai-webhook</name>
 
 	<properties>
 		<version.libai>1.4.8</version.libai>
+		<version.spring-boot>1.5.2.RELEASE</version.spring-boot>
 	</properties>
 
+     <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.2.RELEASE</version>
+    </parent>
+
 	<dependencies>
-		<dependency>
-			<groupId>com.wolterskluwer.gpo.ace</groupId>
-			<artifactId>chatbot-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 
 		<dependency>
 			<groupId>ai.api</groupId>
