--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 		<version>1.5.2.RELEASE</version>
 	</parent>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>onejar-maven-plugin.googlecode.com</id>
+			<url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+		</pluginRepository>
+	</pluginRepositories>
+
+
 	<dependencies>
 
 		<dependency>
