--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,6 @@
 		<version>1.5.2.RELEASE</version>
 	</parent>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>onejar-maven-plugin.googlecode.com</id>
-			<url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
-		</pluginRepository>
-	</pluginRepositories>
-
-
 	<dependencies>
 
 		<dependency>
@@ -76,13 +68,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.dstovall</groupId>
-				<artifactId>onejar-maven-plugin</artifactId>
-				<version>1.4.4</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
+						<phase>package</phase>
 						<goals>
-							<goal>one-jar</goal>
+							<goal>shade</goal>
 						</goals>
 					</execution>
 				</executions>
