--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>chatbot-apiai-webhook</artifactId>
-	<packaging>jar</packaging>
+	<groupId>com.wolterskluwer.gpo.ace</groupId>
+    <artifactId>chatbot-apiai-webhook</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+	
 
 	<name>chatbot-apiai-webhook</name>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
-	</parent>
 
 </project>
